--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Static Template</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Booleaner</title>
   </head>
   <body>
-    <header></header>
+    <!-- inizio header-->
+    <header>
+      <div class="container">
+        <img class="logo" src="img/logo.svg" alt="" />
+      </div>
+    </header>
+    <!-- fine header-->
+
+    <main>
+      <div class="container">
+        <h1 >
+          Internet deve essere al servizio del bene pubblico: il manifesto di
+          Tim Berners-Lee
+        </h1>
+        <div class="autore">Scritto da: <span>The booleaner<span></div>
+        <div class="data">il 10/10/2020</div>
+
+        <div class="photos">
+          <img src="../img/tim-1.jpg" alt="">
+          <img src="../img/tim-2.jpg" alt="">
+          <p class="caption">1st photo: John S. and James L. Knight foundation, by Scott Henrichsen<br>
+          2nd photo: Wikimedia, by Paul Clark</p>
+          
+        </div>
+      </div>
+    </main>
   </body>
 </html>
